--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -88,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Rgs-Qp-h9J">
-                                <rect key="frame" x="384" y="136" width="364" height="246"/>
+                                <rect key="frame" x="384" y="136" width="364" height="239"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" red="0.40784313729999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -155,12 +155,14 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Qxg-xi-EK3">
-                                <rect key="frame" x="361" y="551" width="73" height="37"/>
+                                <rect key="frame" x="95" y="407" width="421" height="145"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Create">
+                                <color key="tintColor" red="0.40784313729999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" image="btnCreate_v1.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.40784313729999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -171,7 +173,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Game Name" minimumFontSize="17" id="tHw-hE-8Fi">
-                                <rect key="frame" x="336" y="347" width="97" height="31"/>
+                                <rect key="frame" x="95" y="257" width="421" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" red="0.40784313729999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -322,6 +324,7 @@
     </scenes>
     <resources>
         <image name="btnCreateGame_v1.png" width="556" height="346"/>
+        <image name="btnCreate_v1.png" width="612" height="182"/>
         <image name="btnJoinGame_v1.png" width="586" height="435"/>
         <image name="btnLogIn_v1.png" width="394" height="342"/>
         <image name="btnOptions_v1.png" width="966" height="264"/>
