--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -379,7 +379,7 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         </view>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="XSK-aw-BcL">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="XSK-aw-BcL">
                                 <rect key="frame" x="0.0" y="66" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -423,55 +423,6 @@
         <image name="btnLogIn_v1.png" width="394" height="342"/>
         <image name="btnOptions_v1.png" width="966" height="264"/>
     </resources>
-    <classes>
-        <class className="Create_GameViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/Create_GameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="btnCreateGameOnClick:"/>
-                <relationship kind="outlet" name="btnCreateGame" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="edtGameName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="FightViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FightViewController.h"/>
-        </class>
-        <class className="JoinGameViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JoinGameViewController.h"/>
-        </class>
-        <class className="Login_ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/Login_ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="edtIPAddressChanged:"/>
-                <relationship kind="action" name="onBtnLoginClick:"/>
-                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="edtUserName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="MainMenuCiewControllerViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuCiewControllerViewController.h"/>
-        </class>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="OptionsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OptionsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="btnReconnectOnClick:"/>
-                <relationship kind="action" name="sgNetworkConnectionValueChanged:"/>
-                <relationship kind="action" name="startMyTimer:"/>
-                <relationship kind="action" name="stopMyTimer:"/>
-                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="sgNetworkConnection" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="txtConnecting" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="OwnNavigationController" superclassName="UINavigationController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OwnNavigationController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
